@@ -5,6 +5,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 	Tom Collins
 	- Update configure with correct location of vlimits.default.
+	- Fix typo (ammount) in vmoddomlimits. [882884]
 
 5.4.0-rc2 - released 19-Jan-04
 
